# model-pipelines

./: .gitignore  README.md  p95_by_rps.csv  pyproject.toml
src/model_pipelines/: classify.py  classify_res.py  client.py  controller.py  controller_scaler.py  detect.py  enhance.py
src/model_pipelines/proto/: ControllerService.proto  ControllerService_pb2.py  ControllerService_pb2.pyi  ControllerService_pb2_grpc.py  ModelService.proto  ModelService_pb2.py  ModelService_pb2.pyi  ModelService_pb2_grpc.py
src/model_pipelines/servers/: classify_res_server.py  classify_server.py  controller_server.py  detect_server.py  enhance_server.py  server_runner.py
tests/: classify_test.py  grpc_stages.js  test_grpc.js  test_test.js
