[project]
name = "model-pipelines"
version = "0.1.0"
description = ""
authors = [
    {name = "Ashwin Senthilvasan",email = "ashwin.senthilvasan@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "grpcio (>=1.71.0,<2.0.0)",
    "grpcio-tools (>=1.71.0,<2.0.0)"
]

[tool.poetry]
packages = [{include = "model_pipelines", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
