[project]
name = "model-pipelines"
version = "0.1.0"
description = ""
authors = [
    {name = "Ashwin Senthilvasan",email = "ashwin.senthilvasan@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "grpcio (>=1.71.0,<2.0.0)",
    "grpcio-tools (>=1.71.0,<2.0.0)",
    "torch (>=2.7.0,<3.0.0)",
    "realesrgan @ git+https://github.com/sberbank-ai/Real-ESRGAN.git",
    "pandas (>=2.2.3,<3.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "pillow (>=11.2.1,<12.0.0)",
    "numpy (>=2.2.6,<3.0.0)",
    "opencv-python-headless (>=4.11.0.86,<5.0.0.0)",
    "gitpython (>=3.1.30)"
]

[tool.poetry]
packages = [{include = "model_pipelines", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
